syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";

/* Enum */
enum OrderBy {
  ASC = 0;
  DESC = 1;
}

enum Status {
  OPEN = 0;
  CLOSED = 1;
}

service Racing {
  // ListRaces will return a collection of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {}
  // Get a single race by its id
  rpc GetRace(GetRaceRequest) returns (Race) {}
}

/* Requests/Responses */

message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
}

// Request for GetRace call
message GetRaceRequest {
  // the id of the race
  int64 id = 1;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  //visible for filtering race
  optional bool visible = 2;
  // order by for order based on advertised start time
  optional OrderBy order_by = 3;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  // The status of the race whether is open or close base on the time the race is advertised to run
  Status status = 7;
}

